--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -11,7 +11,12 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=💾 MEGA,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/MEGA/MEGA.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/MEGA/MEGA.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OneDrive/OneDrive.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleDrive/GoogleDrive.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Dropbox/Dropbox.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/PikPak/PikPak.list
+ruleset=💾 国外网盘,https://raw.githubusercontent.com/request-code/qx/refs/heads/main/rule/MediaFire.list
 ruleset=🦁 Kemono,https://raw.githubusercontent.com/request-code/qx/refs/heads/main/rule/kemono.list
 ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
@@ -37,7 +42,7 @@ custom_proxy_group=🚀 节点选择`select`[]🇭🇰 IEPL香港`[]🇭🇰 香
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 IEPL香港`[]🇨🇳 IEPL台湾`[]🇺🇸 IEPL美国`[]🇯🇵 IEPL日本`[]🇸🇬 IEPL土坡`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🦁 Kemono`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 国外网盘`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 IEPL香港`[]🇺🇸 IEPL美国`[]🇯🇵 IEPL日本`[]🇸🇬 IEPL土坡`[]🇨🇳 IEPL台湾`[]🚀 节点选择`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=📹 YouTube`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
