--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -205,13 +205,12 @@ no-ipv6
 
 
 [policy]
-url-latency-benchmark=IEPL自动, resource-tag-regex=IEPL, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-url-latency-benchmark=IEPL香港, server-tag-regex=香港.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-url-latency-benchmark=IEPL台湾, server-tag-regex=新加坡.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-url-latency-benchmark=IEPL日本, server-tag-regex=日本.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-url-latency-benchmark=IEPL美国, server-tag-regex=美国.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-url-latency-benchmark=IEPL土坡, server-tag-regex=新加坡.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IEPL.png
-
+url-latency-benchmark=IEPL自动, resource-tag-regex=IEPL, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
+url-latency-benchmark=IEPL香港, server-tag-regex=香港.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
+url-latency-benchmark=IEPL台湾, server-tag-regex=台湾.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
+url-latency-benchmark=IEPL日本, server-tag-regex=日本.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
+url-latency-benchmark=IEPL美国, server-tag-regex=美国.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
+url-latency-benchmark=IEPL土坡, server-tag-regex=新加坡.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
 url-latency-benchmark=自动选择, server-tag-regex=^(?!.*(?:网易|墨鱼|IEPL)).*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|IEPL|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|IEPL|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
@@ -221,9 +220,7 @@ url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|JP|(?i)Japan))
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
 url-latency-benchmark=土坡节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美|IEPL)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-static=苹果服务, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=全球加速, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-static=哔哩哔哩, direct, IEPL香港, IEPL台湾, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/bilibili.png
 static=国际媒体, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=兜底分流, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
@@ -237,8 +234,6 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/GoogleVoice.list, tag=Google Voice, force-policy=美国节点, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=OpenAi, force-policy=美国节点, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/Streaming.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/StreamingSE.list, tag=哔哩哔哩, force-policy=哔哩哔哩, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Proxy.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, tag=国内网站, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
