--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -142,6 +142,7 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
 # running_mode_trigger=filter, filter, wifi1:all_direct, wifi2:all_direct
 # > dns_exclusion_list
+# > dns_exclusion_list
 dns_exclusion_list=*.10099.com.cn, *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
 
 
@@ -205,29 +206,25 @@ no-ipv6
 
 
 [policy]
-url-latency-benchmark=IEPL自动, resource-tag-regex=IEPL, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=IEPL香港, server-tag-regex=香港.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=IEPL台湾, server-tag-regex=台湾.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=IEPL日本, server-tag-regex=日本.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=IEPL美国, server-tag-regex=美国.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=IEPL土坡, server-tag-regex=新加坡.*IEPL.*, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IEPL.png
-url-latency-benchmark=自动选择, server-tag-regex=^(?!.*(?:网易|墨鱼|IEPL)).*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|IEPL|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|IEPL|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新|IEPL)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(港|台|韩|新|IEPL|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=自动选择, server-tag-regex=^(?!.*(?:网易|墨鱼)).*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=土坡节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+static=原生节点, server-tag-regex=(?=.*(原生|家宽)), alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/China.png
 
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
-url-latency-benchmark=土坡节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美|IEPL)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-static=全球加速, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-static=国际媒体, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
-static=兜底分流, direct, IEPL自动, IEPL香港, IEPL台湾, IEPL日本, IEPL美国, IEPL土坡, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=TikTok, 原生节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=全球加速, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=国际媒体, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=兜底分流, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 
 
 [filter_remote]
-
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/QuantumultX/TikTok/TikTok.list, tag=TikTok, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, tag=广告终结者, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
