--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -218,6 +218,7 @@ static=原生节点, server-tag-regex=(?=.*(原生|家宽)), alive-checking=fals
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
 static=TikTok, 原生节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=Netflix, 原生节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Netflix.png
 static=全球加速, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 static=国际媒体, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=兜底分流, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
@@ -226,6 +227,7 @@ static=兜底分流, direct, 自动选择, 香港节点, 台湾节点, 日本节
 
 [filter_remote]
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/QuantumultX/TikTok/TikTok.list, tag=TikTok, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/QuantumultX/Netflix/Netflix.list, tag=Netflix, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, tag=广告终结者, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
