--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -213,12 +213,13 @@ url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^(
 url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 url-latency-benchmark=土坡节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+static=手动切换, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/Static.png
 static=原生节点, server-tag-regex=(?=.*(原生|家宽)), alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/China.png
 
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
-static=TikTok, 原生节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
-static=Netflix, 原生节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Netflix.png
+static=TikTok, 原生节点, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=Netflix, 原生节点, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Netflix.png
 static=全球加速, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 static=国际媒体, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=兜底分流, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
