--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -220,7 +220,7 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|Ame
 url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 url-latency-benchmark=土坡节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$, check-interval=900, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 static=手动切换, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/Static.png
-static=原生节点, server-tag-regex=(?=.*(原生|家宽)), alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/China.png
+static=原生家宽, server-tag-regex=(?=.*(原生|家宽|Home|home)), alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/Color/China.png
 
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
