--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -224,8 +224,8 @@ static=原生家宽, server-tag-regex=(?=.*(原生|家宽|Home|home)), alive-che
 
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 #将下面的url-latency-benchmark的内容替换成static，并删除[check-interval=900, tolerance=0, ]即可手动选择节点
-static=TikTok, 原生节点, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
-static=Netflix, 原生节点, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Netflix.png
+static=TikTok, 原生家宽, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=Netflix, 原生家宽, 手动切换, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Netflix.png
 static=全球加速, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 static=国际媒体, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=兜底分流, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, 土坡节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
